Fixing IE10 layout bugs

--- a/packages/terra-clinical-layout/src/HoverMenu.scss
+++ b/packages/terra-clinical-layout/src/HoverMenu.scss
@@ -18,16 +18,16 @@
     border-right: var(--layout-menu-hover-target-border-right, 1px solid #bcbfc0);
     float: right;
     overflow: hidden;
-    padding-top: 20px;
     width: var(--layout-menu-hover-target-width, 30px);
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
   }
 
   .hover-section-icon {
     flex: 0 0 auto;
+    padding-top: 20px;
     width: 100%;
   }
 
@@ -46,8 +46,7 @@
     transform: rotate(-90deg) translate3d(-100%, -50%, 0);
     transform-origin: left top 0;
 
-    height: 100%;
-    text-align: end;
+    text-align: right;
     vertical-align: middle;
     padding: 0 5px 0 15px;
     overflow: hidden;
