--- a/packages/terra-clinical-layout/src/MenuHeader.scss
+++ b/packages/terra-clinical-layout/src/MenuHeader.scss
@@ -52,6 +52,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 100%;
     word-break: normal;
     word-wrap: normal;
   }
